--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <footer class="flex">
     <span>
-      &copy;2019 Pluralsight
+      &copy; TM 2022
     </span>
   </footer>
   <script src="js/kanban.js"></script>
